# hyperliquid-backtester

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DATA-SYNC.md  VALIDATION.md  WRITING-STRATEGIES.md
src/hlbt/: __init__.py  backtester.py  cli.py  demo.py  indicators.py  metrics.py  strategy.py  sync.py
strategies/examples/: atr_scalp.py  bollinger_revert.py  rsi_reversion.py  sma_cross.py
strategies/user/: README.md
tests/: test_engine.py
