[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hlbt"
version = "0.1.0"
description = "Hyperliquid backtester — sync real market data from CryptoDataAPI, test a strategy, replay it on a chart."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "CryptoDataAPI", email = "hello@cryptodataapi.com" }]
keywords = ["backtesting", "hyperliquid", "crypto", "trading", "perpetuals", "quant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://cryptodataapi.com"
Repository = "https://github.com/Crypto-Data-API/hyperliquid-backtester"
"Data API" = "https://cryptodataapi.com/backtest-data"

[project.scripts]
hlbt = "hlbt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
